# Readyn

./: .gitattributes  .gitignore  AGENTS.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed.py  seed_data.json  services.py
backend/app/garmin/: __init__.py  client.py  load.py  sync.py  transform.py
backend/app/routers/: ai.py  data.py  garmin.py  profile.py  settings.py  system.py
backend/tests/: conftest.py  test_api.py  test_garmin.py  test_load.py
design/: README.md
docs/harness/: README.md  backlog.md  decisions.md  design-source-map.md  project-status.md  validation-and-delivery.md
docs/harness/exec-plans/: TEMPLATE.md
docs/harness/exec-plans/active/: design-code-map.md  (+1 more)
frontend/: index.html  login.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.disconnect.test.tsx  App.test.tsx  App.tsx  index.css
frontend/src/components/: CompareModal.test.tsx  CompareModal.tsx  ConnStatus.tsx  EmptyState.tsx  Icon.tsx  Sidebar.tsx  SourceBadge.tsx  SportFilter.tsx  Topbar.tsx  support.test.tsx
frontend/src/design-system/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  IconButton.tsx  Input.tsx  ProgressRing.tsx  Select.tsx  Sparkline.tsx  StatCard.tsx  Switch.tsx  Tabs.tsx  Tag.tsx  design-system.test.tsx  index.ts
frontend/src/details/: ActivityCompare.test.tsx  ActivityCompare.tsx  ActivityDetail.test.tsx  ActivityDetail.tsx  ConnectorDetail.test.tsx  ConnectorDetail.tsx  MetricDetail.test.tsx  MetricDetail.tsx  PlanDetail.tsx  TemplateDetail.tsx
frontend/src/lib/: ConnContext.ts  ai.ts  api.ts  applyPlan.ts  chartAxis.ts  defaultSettings.ts  emptyData.ts  format.ts  mockData.ts  paginate.ts  taxonomy.ts  types.ts
frontend/src/login/: Login.tsx  login.css  main.tsx
frontend/src/modules/: AIModule.test.tsx  AIModule.tsx  Connectors.test.tsx  Connectors.tsx  Dashboard.test.tsx  Dashboard.tsx  Library.tsx  Profile.test.tsx  Profile.tsx  Records.test.tsx  Records.tsx  Settings.test.tsx  Settings.tsx  Training.tsx  Weight.tsx
frontend/src/styles/: global.css
(+19 files in other folders)
