[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "readyn-backend"
version = "0.1.0"
description = "Readyn 运动数据分析平台 — FastAPI backend (README §7 data shapes, §9–10 endpoints)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Garmin China integration. garth (the previous client) self-deprecated
    # upstream; garminconnect ships its own curl_cffi HTTP layer and natively
    # supports the China region. Pin tightly — the 0.3.x line iterates fast and
    # its transitive curl_cffi binary can break across releases.
    "garminconnect==0.3.6",
    "curl_cffi==0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI uses function calls (Depends) in argument defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
